tests/driver/pass/export_value_type/main.cpm
(* Copyright 2023 Enrico Granata *)
(* *)
(* Licensed under the Apache License, Version 2.0 (the "License"); *)
(* you may not use this file except in compliance with the License. *)
(* You may obtain a copy of the License at *)
(*  *)
(*     http://www.apache.org/licenses/LICENSE-2.0 *)
(*  *)
(* Unless required by applicable law or agreed to in writing, software *)
(* distributed under the License is distributed on an "AS IS" BASIS, *)
(* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. *)
(* See the License for the specific language governing permissions and *)
(* limitations under the License. *)

import "util.bom";

func main() ret int32 {
    let p = alloc Pair{x:12,y:24};
    assert (p.x == 12);
    assert (p.y == 24);
    let p = add_pair(p);
    assert (p == 36);
    return 0;
}
