tests/driver/fail/try_unexported_impl/main.cpm
(* Copyright 2023 Enrico Granata *)
(* *)
(* Licensed under the Apache License, Version 2.0 (the "License"); *)
(* you may not use this file except in compliance with the License. *)
(* You may obtain a copy of the License at *)
(*  *)
(*     http://www.apache.org/licenses/LICENSE-2.0 *)
(*  *)
(* Unless required by applicable law or agreed to in writing, software *)
(* distributed under the License is distributed on an "AS IS" BASIS, *)
(* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. *)
(* See the License for the specific language governing permissions and *)
(* limitations under the License. *)

import "util.bom";

func foo() {
    let p = alloc Pair(12);
    assert (p.x == 12);
    assert (p.y == 14);
    let p = p->add();
    assert (p == 26);
}

func main() ret int32 {
    foo();

    assert __freed_objects > 0;
    assert g_DeletedPairs == 1;
    return 0;
}
